fix hero landscape on mobile

--- a/css/queries.css
+++ b/css/queries.css
@@ -25,7 +25,7 @@
     }
 
     .hero {
-        background-position: 65% center;
+        background-position: 65% 75%;
     }
 
     .hero .hero-content {
